src/objects/Staff__c.object
<CustomObject>
    <description>Staff informataion</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the staff entity</description>
        <inlineHelpText>Address of the staff</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY()  -  Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Class with which staff is associated with</description>
        <inlineHelpText>Class with which staff is associated with</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Staffs</relationshipLabel>
        <relationshipName>Staffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth of the staff entity</description>
        <inlineHelpText>Date of Birth of the staff entity</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Divisions with which staff is associated with</description>
        <inlineHelpText>Divisions with which staff is associated with</inlineHelpText>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Staffs</relationshipLabel>
        <relationshipName>Staffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>Employee__r.Employee_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Employee</description>
        <inlineHelpText>Associated Employee</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee_SM__c</referenceTo>
        <relationshipLabel>Staffs</relationshipLabel>
        <relationshipName>Staffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of staff entity</description>
        <inlineHelpText>First Name of concerned staff who is point of contact for a division</inlineHelpText>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Number__c</fullName>
        <description>ID Card number that generates automatically on staff enrolment</description>
        <displayFormat>STF-{000000}</displayFormat>
        <inlineHelpText>ID Card number that generates automatically on staff enrolment</inlineHelpText>
        <label>ID Card Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the staff entity</description>
        <inlineHelpText>Last name of the staff for a division</inlineHelpText>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile Number of the staff entity</description>
        <inlineHelpText>Mmobile Number of the staff for a division</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of the staff entity</description>
        <inlineHelpText>Last name of the staff for a division</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>Email of the staff entity</description>
        <inlineHelpText>Email of the staff for a division</inlineHelpText>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>